# robocup_navigation

./: .gitignore  README.md  docker-compose.yml  setup.bash
ros2_ws/src/galaxea_simulation/: CMakeLists.txt  package.xml
ros2_ws/src/galaxea_simulation/launch/: gazebo.launch.py
ros2_ws/src/galaxea_simulation/scripts/: swerve_controller.py
ros2_ws/src/galaxea_simulation/urdf/: r1_v2_1_0.urdf
